refac: Use direct Unsafe from jdk.internal